--- a/app/src/main/res/layout/fragment_assessment_detail.xml
+++ b/app/src/main/res/layout/fragment_assessment_detail.xml
@@ -83,15 +83,42 @@
                     android:clickable="true" app:srcCompat="@android:drawable/ic_menu_delete"
                     android:id="@+id/delete_button" app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toTopOf="parent" app:backgroundTint="#F44336" android:tint="#00FFFFFF"/>
+                    app:layout_constraintTop_toTopOf="parent" app:backgroundTint="#F44336" android:tint="#00FFFFFF"
+                    app:layout_constraintBottom_toTopOf="@+id/alarm_set_button"/>
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:clickable="true" app:srcCompat="@android:drawable/ic_lock_idle_alarm"
                     android:id="@+id/alarm_set_button"
-                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-                    app:backgroundTint="#2196F3" android:tint="#00FFFFFF"/>
+                    app:backgroundTint="#2196F3" android:tint="#00FFFFFF"
+                    android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/delete_button"
+                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toTopOf="@+id/sms_button"/>
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:clickable="true" app:srcCompat="@android:drawable/ic_dialog_email"
+                    android:id="@+id/email_button"
+                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    app:backgroundTint="#9C27B0" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/sms_button"
+            />
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:clickable="true" app:srcCompat="@android:drawable/sym_action_chat"
+                    android:id="@+id/sms_button"
+                    android:layout_marginEnd="8dp"
+                    app:backgroundTint="#8BC34A"
+                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/alarm_set_button"
+                    app:layout_constraintEnd_toEndOf="parent"/>
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:clickable="true" app:srcCompat="@android:drawable/ic_menu_save"
+                    android:id="@+id/save_button" android:layout_marginTop="16dp"
+                    app:layout_constraintTop_toBottomOf="@+id/notes" android:layout_marginStart="8dp"
+                    app:layout_constraintStart_toStartOf="parent" app:backgroundTint="#4CAF50"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 </layout>
