--- a/app/src/main/res/layout/fragment_course_detail.xml
+++ b/app/src/main/res/layout/fragment_course_detail.xml
@@ -24,13 +24,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/course_title"
-                    android:layout_marginTop="@dimen/small_margin"
-                    app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="@dimen/small_margin"
                     android:textStyle="bold"
                     android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-                    android:inputType="text"/>
+                    android:inputType="text" app:layout_constraintTop_toBottomOf="@+id/textView6"/>
             <Spinner
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -38,15 +36,6 @@
                     android:id="@+id/course_status_spinner"
                     android:layout_marginStart="@dimen/small_margin"
                     app:layout_constraintTop_toBottomOf="@+id/status_text" android:layout_marginTop="8dp"/>
-            <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@android:drawable/ic_menu_save"
-                    android:id="@+id/course_save_button"
-                    android:layout_marginBottom="8dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp" android:visibility="gone"/>
             <EditText
                     android:id="@+id/start_date"
                     app:courseStartDateFormatted="@{courseDetailViewModel.course}"
@@ -81,7 +70,7 @@
                     android:inputType="date"
                     android:ems="8"
                     android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/end_date_label"
+                    app:layout_constraintTop_toBottomOf="@+id/start_date_label"
                     android:layout_marginStart="8dp"
                     app:layout_constraintStart_toEndOf="@+id/start_date"
                     android:layout_marginEnd="8dp"
@@ -195,8 +184,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/assessments_label"
-                    app:layout_constraintTop_toBottomOf="@+id/notes" app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp" android:layout_marginTop="16dp"/>
+                    app:layout_constraintTop_toBottomOf="@+id/save_button"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp" android:layout_marginTop="8dp"/>
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -204,10 +194,9 @@
                     app:srcCompat="@android:drawable/ic_input_add"
                     android:id="@+id/add_assessment_button"
                     app:fabSize="mini"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/notes"
                     android:layout_marginEnd="8dp"
-                    app:layout_constraintEnd_toEndOf="parent" app:backgroundTint="#F44336" android:tint="#00FFFFFF"/>
+                    app:layout_constraintEnd_toEndOf="parent" app:backgroundTint="#F44336" android:tint="#00FFFFFF"
+                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/assessment_list"/>
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -223,6 +212,20 @@
                     android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/mentor_phone"
                     android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/notes"
                     android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:clickable="true" app:srcCompat="@android:drawable/ic_menu_save"
+                    android:id="@+id/save_button" app:backgroundTint="#4CAF50" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/notes" android:layout_marginStart="8dp"
+                    app:layout_constraintStart_toStartOf="parent"/>
+            <TextView
+                    android:text="Course Title:"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView6" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 </layout>
