--- a/app/src/main/res/layout/fragment_main_menu.xml
+++ b/app/src/main/res/layout/fragment_main_menu.xml
@@ -13,36 +13,31 @@
             android:layout_height="match_parent"
             tools:context=".MainMenuFragment" android:id="@+id/frameLayout">
         <Button
-                android:text="@string/term_button_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" android:id="@+id/term_button"
-                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
-                android:onClick="@{() -> mainMenuViewModel.onTermsButtonClicked()}"/>
-        <Button
-                android:text="@string/course_button_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/course_button"
+                android:onClick="@{() -> mainMenuViewModel.onTermsButtonClicked()}"
+                app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/imageView"
+                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+                android:text="Let's get started!" android:background="#FFC107" android:textColor="#FFFFFF"/>
+        <ImageView
+                android:layout_width="184dp"
+                android:layout_height="212dp"
+                app:srcCompat="@drawable/ic_school_black_24dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
-                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498"
-                app:layout_constraintTop_toBottomOf="@+id/term_button"/>
-        <Button
-                android:text="@string/mentor_button_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/mentor_button"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
-                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498"
-                app:layout_constraintTop_toBottomOf="@+id/course_button"/>
-        <Button
-                android:text="@string/assessment_button_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/assessment_button"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
-                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498"
-                app:layout_constraintTop_toBottomOf="@+id/mentor_button"/>
+                app:layout_constraintEnd_toEndOf="parent" android:id="@+id/imageView" android:tint="#3F51B5"
+                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
+        <TextView
+                android:text="Course Catalog"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/app_title" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/imageView"
+                android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
