--- a/app/src/main/res/layout/fragment_term_detail.xml
+++ b/app/src/main/res/layout/fragment_term_detail.xml
@@ -22,36 +22,33 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="parent"
                 android:id="@+id/term_title"
-                app:layout_constraintTop_toTopOf="parent"
                 app:termTitleFormatted="@{termDetailViewModel.term}"
-                android:layout_marginStart="@dimen/small_margin" android:textStyle="bold"
-                android:layout_marginTop="@dimen/medium_margin"
+                android:layout_marginStart="@dimen/small_margin"
+                android:textStyle="bold"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                 android:inputType="textShortMessage"
-                android:hint="@string/term_title_hint"/>
+                android:hint="@string/term_title_hint" app:layout_constraintTop_toBottomOf="@+id/textView3"/>
         <EditText
                 tools:text="Start Date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/start_date_text"
+                android:id="@+id/start_date"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/term_title"
+                app:layout_constraintTop_toBottomOf="@+id/textView4"
                 app:startDateFormatted="@{termDetailViewModel.term}"
                 android:layout_marginStart="@dimen/small_margin"
-                android:layout_marginTop="@dimen/medium_margin"
                 android:hint="@string/enter_start_date_hint"
                 android:inputType="date"/>
         <EditText
                 tools:text="End Date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/start_date"
+                android:id="@+id/end_date"
                 app:layout_constraintStart_toStartOf="parent"
                 app:endDateFormatted="@{termDetailViewModel.term}"
                 android:layout_marginStart="@dimen/small_margin"
-                android:layout_marginTop="@dimen/medium_margin"
                 android:hint="@string/enter_end_date_hint"
-                app:layout_constraintTop_toBottomOf="@+id/start_date_text"
+                app:layout_constraintTop_toBottomOf="@+id/textView5"
                 android:inputType="date"/>
         <Button
                 android:text="@string/save_term_button_text"
@@ -65,15 +62,15 @@
         <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                app:layout_constraintTop_toBottomOf="@+id/textView"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 android:id="@+id/term_course_list"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView"/>
         <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/course_add_button"
-                android:src="@android:drawable/ic_input_add"
+                android:src="@android:drawable/ic_menu_add"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:clickable="true"
@@ -81,19 +78,20 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toTopOf="@+id/term_course_list"
-                android:onClick="@{() -> termDetailViewModel.onAddCourse()}" app:backgroundTint="#E91E63"
+                android:onClick="@{() -> termDetailViewModel.onAddCourse()}" app:backgroundTint="#4CAF50"
                 app:fabSize="mini"/>
         <TextView
                 android:text="Courses for This Term"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/textView"
-                app:layout_constraintTop_toBottomOf="@+id/term_save_button"
+                app:layout_constraintTop_toBottomOf="@+id/end_date"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="8dp"
-                android:textStyle="bold" android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
+                android:textStyle="bold" android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        />
         <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -101,5 +99,26 @@
                 android:id="@+id/delete_button" app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                 app:layout_constraintTop_toTopOf="parent" app:backgroundTint="#F44336"/>
+        <TextView
+                android:text="Term Title:"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView3" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp"/>
+        <TextView
+                android:text="Start Date:"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView4"
+                app:layout_constraintTop_toBottomOf="@+id/term_title" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp"/>
+        <TextView
+                android:text="End Date:"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView5"
+                app:layout_constraintTop_toBottomOf="@+id/start_date" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
