--- a/app/src/main/res/layout/fragment_assessment_detail.xml
+++ b/app/src/main/res/layout/fragment_assessment_detail.xml
@@ -25,8 +25,8 @@
                     android:text="Name"
                     android:ems="10"
                     android:id="@+id/assessment_title" android:layout_marginStart="8dp"
-                    app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toTopOf="parent" android:textStyle="bold"/>
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:textStyle="bold" app:layout_constraintTop_toBottomOf="@+id/textView7"/>
             <Spinner
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -119,6 +119,13 @@
                     android:id="@+id/save_button" android:layout_marginTop="16dp"
                     app:layout_constraintTop_toBottomOf="@+id/notes" android:layout_marginStart="8dp"
                     app:layout_constraintStart_toStartOf="parent" app:backgroundTint="#4CAF50"/>
+            <TextView
+                    android:text="Assessment Title:"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView7" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 </layout>
