--- a/app/src/main/res/layout/fragment_course_detail.xml
+++ b/app/src/main/res/layout/fragment_course_detail.xml
@@ -164,39 +164,6 @@
                     android:id="@+id/notes_label" android:layout_marginTop="16dp"
                     app:layout_constraintTop_toBottomOf="@+id/mentor_email" app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="8dp"/>
-            <androidx.recyclerview.widget.RecyclerView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    app:layout_constraintTop_toBottomOf="@+id/assessments_label"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    android:id="@+id/assessment_list"
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                    android:layout_marginTop="8dp"
-                    android:fastScrollEnabled="true"
-                    android:scrollbarStyle="insideInset"
-                    android:scrollbars="vertical"
-                    android:splitMotionEvents="false"
-                    android:verticalScrollbarPosition="right"/>
-            <TextView
-                    android:text="Assessments:"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/assessments_label"
-                    app:layout_constraintTop_toBottomOf="@+id/save_button"
-                    app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp" android:layout_marginTop="8dp"/>
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:clickable="true"
-                    app:srcCompat="@android:drawable/ic_input_add"
-                    android:id="@+id/add_assessment_button"
-                    app:fabSize="mini"
-                    android:layout_marginEnd="8dp"
-                    app:layout_constraintEnd_toEndOf="parent" app:backgroundTint="#F44336" android:tint="#00FFFFFF"
-                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/assessment_list"/>
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -216,8 +183,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:clickable="true" app:srcCompat="@android:drawable/ic_menu_save"
-                    android:id="@+id/save_button" app:backgroundTint="#4CAF50" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/notes" android:layout_marginStart="8dp"
+                    android:id="@+id/save_button" app:backgroundTint="#4CAF50" android:layout_marginTop="16dp"
+                    app:layout_constraintTop_toBottomOf="@+id/assessment_button" android:layout_marginStart="8dp"
                     app:layout_constraintStart_toStartOf="parent"/>
             <TextView
                     android:text="Course Title:"
@@ -226,6 +193,14 @@
                     android:id="@+id/textView6" android:layout_marginTop="8dp"
                     app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="8dp"/>
+            <Button
+                    android:text="View Assessments"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/assessment_button"
+                    android:background="#03A9F4" android:textColor="#FFFFFF"
+                    app:layout_constraintTop_toBottomOf="@+id/notes" android:layout_marginStart="8dp"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 </layout>
