--- a/app/src/main/res/layout/fragment_term_detail.xml
+++ b/app/src/main/res/layout/fragment_term_detail.xml
@@ -50,48 +50,6 @@
                 android:hint="@string/enter_end_date_hint"
                 app:layout_constraintTop_toBottomOf="@+id/textView5"
                 android:inputType="date"/>
-        <Button
-                android:text="@string/save_term_button_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/term_save_button"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="@dimen/small_margin"
-                android:layout_marginTop="@dimen/medium_margin"
-                app:layout_constraintTop_toBottomOf="@+id/start_date" android:visibility="gone"/>
-        <androidx.recyclerview.widget.RecyclerView
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                android:id="@+id/term_course_list"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/textView"/>
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/course_add_button"
-                android:src="@android:drawable/ic_menu_add"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:clickable="true"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toTopOf="@+id/term_course_list"
-                android:onClick="@{() -> termDetailViewModel.onAddCourse()}" app:backgroundTint="#4CAF50"
-                app:fabSize="mini"/>
-        <TextView
-                android:text="Courses for This Term"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView"
-                app:layout_constraintTop_toBottomOf="@+id/end_date"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp"
-                android:textStyle="bold" android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        />
         <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -120,5 +78,20 @@
                 android:id="@+id/textView5"
                 app:layout_constraintTop_toBottomOf="@+id/start_date" app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="8dp"/>
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true" app:srcCompat="@android:drawable/ic_menu_save"
+                android:id="@+id/save_button" app:backgroundTint="#4CAF50" android:layout_marginStart="8dp"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="32dp"
+                app:layout_constraintTop_toBottomOf="@+id/course_list_button"/>
+        <Button
+                android:text="View Courses"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                android:id="@+id/course_list_button" android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/end_date" android:layout_marginStart="8dp"
+                android:background="#2196F3" android:textColor="#FFFFFF"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
