--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -29,27 +29,39 @@
         <action android:id="@+id/action_termDetailFragment_to_termListFragment" app:destination="@id/termListFragment"
                 app:enterAnim="@anim/nav_default_enter_anim" app:exitAnim="@anim/nav_default_exit_anim"
                 app:popEnterAnim="@anim/nav_default_pop_enter_anim" app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
-        <action android:id="@+id/action_termDetailFragment_to_courseDetailFragment"
-                app:destination="@id/courseDetailFragment" app:enterAnim="@anim/nav_default_enter_anim"
-                app:exitAnim="@anim/nav_default_exit_anim" app:popEnterAnim="@anim/nav_default_pop_enter_anim"
-                app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
+        <action android:id="@+id/action_termDetailFragment_to_courseListFragment"
+                app:destination="@id/courseListFragment"/>
     </fragment>
     <fragment android:id="@+id/courseDetailFragment"
               android:name="com.example.coursecatalog.courses.CourseDetailFragment"
               android:label="fragment_course_term_detail" tools:layout="@layout/fragment_course_detail">
         <argument android:name="courseKey" app:argType="long"/>
-        <action android:id="@+id/action_courseDetailFragment_to_termDetailFragment"
-                app:destination="@id/termDetailFragment" app:enterAnim="@anim/nav_default_enter_anim"
-                app:exitAnim="@anim/nav_default_exit_anim" app:popEnterAnim="@anim/nav_default_pop_enter_anim"
-                app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
-        <action android:id="@+id/action_courseDetailFragment_to_assessmentDetailFragment"
-                app:destination="@id/assessmentDetailFragment"/>
+        <action android:id="@+id/action_courseDetailFragment_to_courseListFragment"
+                app:destination="@id/courseListFragment"/>
+        <action android:id="@+id/action_courseDetailFragment_to_assessmentListFragment"
+                app:destination="@id/assessmentListFragment"/>
     </fragment>
     <fragment android:id="@+id/assessmentDetailFragment"
               android:name="com.example.coursecatalog.assessments.AssessmentDetailFragment"
               android:label="fragment_assessment_detail" tools:layout="@layout/fragment_assessment_detail">
         <argument android:name="assessmentKey" app:argType="long"/>
-        <action android:id="@+id/action_assessmentDetailFragment_to_courseDetailFragment"
+        <action android:id="@+id/action_assessmentDetailFragment_to_assessmentListFragment"
+                app:destination="@id/assessmentListFragment"/>
+    </fragment>
+    <fragment android:id="@+id/courseListFragment" android:name="com.example.coursecatalog.courses.CourseListFragment"
+              android:label="fragment_course_list" tools:layout="@layout/fragment_course_list">
+        <action android:id="@+id/action_courseListFragment_to_courseDetailFragment"
                 app:destination="@id/courseDetailFragment"/>
+        <action android:id="@+id/action_courseListFragment_to_termDetailFragment"
+                app:destination="@id/termDetailFragment"/>
+        <argument android:name="termKey" app:argType="long"/>
+    </fragment>
+    <fragment android:id="@+id/assessmentListFragment" android:name="com.example.coursecatalog.assessments.AssessmentListFragment"
+              android:label="fragment_assessment_list" tools:layout="@layout/fragment_assessment_list">
+        <action android:id="@+id/action_assessmentListFragment_to_courseDetailFragment"
+                app:destination="@id/courseDetailFragment"/>
+        <action android:id="@+id/action_assessmentListFragment_to_assessmentDetailFragment"
+                app:destination="@id/assessmentDetailFragment"/>
+        <argument android:name="courseKey" app:argType="long"/>
     </fragment>
 </navigation>
